[package]
name = "synco_p2p"
version = "0.1.0"
authors = ["Aleksei Kharlamov <aleksei.kharlamov@zattoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
relay = []

[dependencies]
quick-error = "2.0.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0"
smol = "1.2.5"
futures-lite = "1.11.3"
defer = "0.1.0"
async-channel = "1.6.1"
libp2p = "0.37.1"
log = "0.4.0"
env_logger = "0.8.3"
futures = "0.3"
serde_yaml = "0.8"
shellexpand = "2.1.0"
base64 = "0.13.0"
async-signals = "0.3.1"
libc = "0.2.93"
async-process = "1.1.0"
serde_tuple = "0.5.0"
